# btpc

./: .gitignore  .lychee.toml  .mdbook-sha256  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_PLAN.md  Makefile  README.md  SECURITY.md  book.toml  deny.toml  mkdocs.yml  proj.md  pyproject.toml  todos.md
.github/: dependabot.yml  dependency-review-config.yml  docs-health.json  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-refresh.yml  dependency-review.yml  docs.yml  fuzz.yml  maintenance.yml  release.yml  scorecard.yml
benches/: README.md  __init__.py  baseline-template.md  profiling.md  torrent_creation.py
benches/baselines/: 2026-07-01-pre-optimization.md  2026-07-01-python-lazy-snapshots.md  2026-07-01-traversal-inspection.md  2026-07-01-v1-parallel.md  2026-07-01-v2-hybrid-parallel.md
benches/btpc_bench/: __init__.py  __main__.py  adapters.py  cli.py  dataset.py  models.py  paths.py  python_adapter.py  python_boundary.py  report.py  runner.py  validation.py
benches/releases/: 2026-07-01-0.1.0-rc.md
crates/btpc-cli/: Cargo.toml
crates/btpc-cli/src/: context.rs  diagnostics.rs  main.rs  output.rs  progress.rs  reference.rs  render.rs
crates/btpc-cli/src/command/: mod.rs  parsers.rs
crates/btpc-cli/src/config/: mod.rs  path_policy.rs
crates/btpc-cli/src/handlers/: inspect_format.rs  mod.rs
crates/btpc-cli/tests/: acceptance.rs  batch.rs  completion.rs  config.rs  config_commands.rs  create.rs  documentation.rs  edit.rs  globals.rs  inspect.rs  interoperability.rs  magnet.rs  reference.rs  rendering.rs  verify.rs
crates/btpc-core/: Cargo.toml  README.md
crates/btpc-core/benches/: core.rs
crates/btpc-core/examples/: inspect.rs
crates/btpc-core/src/: bencode.rs  edit.rs  error.rs  lib.rs  limits.rs  magnet.rs  metadata.rs  verify.rs
crates/btpc-core/src/create/: atomic_output.rs  mod.rs  piece_length.rs  progress.rs
crates/btpc-core/src/metainfo/: mod.rs  path_types.rs
crates/btpc-core/src/verify/: safe_fs.rs
crates/btpc-core/tests/: benchmark_inventory.rs  bencode_canonical.rs  bencode_parser.rs  compile_fail.rs  documentation.rs  edit.rs  error.rs  hybrid_create.rs  interoperability.rs  magnet.rs  manifest.rs  model_based.rs  mutation_stress.rs  optional_metadata.rs  parallel_create.rs  piece_length.rs  public_api.rs  raw_metainfo.rs  v1_create.rs  v1_hash.rs  v1_metainfo.rs  v2_create.rs  v2_merkle.rs  v2_metainfo.rs  verify.rs
crates/btpc-core/tests/ui/: manifest_entry_weak_constructor.rs  manifest_entry_weak_constructor.stderr  private_error_module.rs  private_error_module.stderr  raw_metainfo_outlives_input.rs  raw_metainfo_outlives_input.stderr
crates/btpc-python/: Cargo.toml
crates/btpc-python/src/: creation.rs  editing.rs  errors.rs  inspection.rs  lib.rs  module.rs  progress.rs  views.rs
docs/: 404.md  SUMMARY.md  cli.md  compatibility.md  contributing.md  index.md  performance.md  python-api.md  release-checklist.md  security.md
docs/cli/: completion.md  configuration.md  index.md
docs/completions/: btpc.bash  btpc.elvish  btpc.fish  btpc.powershell  btpc.zsh
docs/concepts/: hybrid.md  index.md  piece-length.md  reproducibility-bytes.md  v1.md  v2.md
docs/getting-started/: cli.md  index.md  installation.md  python.md  rust.md
docs/guides/: configuration-presets.md  creating.md  editing.md  index.md  inspecting-validating.md  verifying.md
docs/overrides/: main.html
docs/python/: examples.md  index.md
docs/reference/: btpc-completion-generate.txt  btpc-completion-install.txt  btpc-completion-uninstall.txt  btpc-completion.txt  btpc-completions.txt  btpc-config-check.txt  btpc-config-explain-create.txt  btpc-config-explain.txt  btpc-config-init.txt  btpc-config-path.txt  btpc-config-preset-list.txt  btpc-config-preset-remove.txt  btpc-config-preset-save.txt  btpc-config-preset-show.txt  btpc-config-preset.txt  btpc-config-show.txt  btpc-config-tracker-add.txt  btpc-config-tracker-list.txt  btpc-config-tracker-remove.txt  btpc-config-tracker.txt  btpc-config.txt  btpc-create.txt  btpc-edit.txt  btpc-inspect.txt  btpc-magnet.txt  btpc-manpage.txt  btpc-validate.txt  btpc-verify.txt  btpc.1  btpc.txt
docs/rust/: index.md
docs/stylesheets/: extra.css  mdbook.css
fuzz/: Cargo.toml  README.md
fuzz/corpus/canonical_roundtrip/: dictionary  large-negative-integer  large-positive-integer  list  non-utf8  noncanonical-large-integer
fuzz/corpus/parse/: deep-list  duplicate-key
fuzz/fuzz_targets/: canonical_roundtrip.rs  magnet.rs  metainfo.rs  metainfo_roundtrip.rs  parse.rs
python/btpc/: __init__.py  _conversion.py  _native.pyi  creation.py  errors.py  metainfo.py  types.py  verification.py
scripts/: benchmark_python_snapshot_memory.py  build_docs_site.py  build_mdbook_site.py  check_crate_package.sh  check_docs.py  check_docs_health.py  check_docs_live.py  check_docs_site.py  check_mdbook.py  check_native_stub.py  check_python_types.sh  check_rust_api.sh  check_spec_sync.py  check_specs.py  check_version.py  collect_docs_external_links.py  docs_renderer_baseline.py  generate-cli-reference.sh  generate-interop-fixtures.sh  mdbook_python_api.py  package_cli.py  package_source.py  postprocess_mdbook.py  render_benchmark_fixture.py  run-hook-stage.sh  serve_mdbook.py  set_version.py  smoke_cli.py  smoke_wheel.py  sync-fuzz-corpus.sh  verify_artifacts.py  write_gate_summary.py
specs/: README.md  architecture.md  benchmarking.md  bencode.md  cli.md  creation.md  documentation-site.md  errors.md  metainfo.md  ownership.toml  performance.md  product.md  python-api.md  release.md  rust-api.md  schema.json  security.md  testing.md  verification.md
tests/benchmarks/: test_harness.py  test_paths.py  test_python_boundary.py
tests/docs/: test_cli_reference.py  test_docs_gate.py  test_documentation_health.py  test_documentation_metadata.py  test_information_architecture.py  test_live_documentation.py  test_mdbook_artifact.py  test_mdbook_bootstrap.py  test_mdbook_content_port.py  test_mdbook_python_api.py  test_pages_workflow.py  (+5 more)
(+76 files in other folders)
