[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "btpc"
dynamic = ["version"]
description = "High-performance BitTorrent metainfo tooling"
keywords = ["bittorrent", "metainfo", "cpython-gil-required"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://burritothief.github.io/btpc/"
Homepage = "https://burritothief.github.io/btpc/"
Issues = "https://github.com/burritothief/btpc/issues"
Repository = "https://github.com/burritothief/btpc"
Source = "https://github.com/burritothief/btpc"

[tool.pyrefly.errors]
redundant-cast = "warn"

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "maturin>=1.9,<2",
    "pre-commit>=4,<5",
    "psutil>=7,<8",
    "pyrefly==1.1.1",
    "pyright>=1.1.400,<2",
    "pytest>=8.4,<10",
    "pytest-cov>=7.1.0",
    "ruff>=0.12,<1",
    "types-psutil>=7.2.2.20260518",
    "zizmor>=1.26.1",
]
docs = [
    "griffelib==2.1.0",
    "pyyaml==6.0.3",
]

[tool.maturin]
manifest-path = "crates/btpc-python/Cargo.toml"
module-name = "btpc._native"
python-source = "python"
features = ["pyo3/extension-module"]
include = [{ path = "LICENSE", format = "sdist" }]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["target"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D100", "D103", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"tests/benchmarks/**" = [
    "ARG005",
    "FBT003",
    "PLR2004",
    "S101",
    "S311",
    "S324",
]
"benches/**" = [
    "C901",
    "EM101",
    "EM102",
    "PLR0912",
    "PLR0915",
    "PLR0911",
    "S311",
    "S324",
    "S603",
    "T201",
    "TRY003",
]
"scripts/**" = [
    "C901",
    "E501",
    "EM101",
    "EM102",
    "S603",
    "S607",
    "T201",
    "TRY003",
    "TRY004",
]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["python", "tests/python/typing/consumer.py"]
exclude = ["target"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "error"

[tool.uv]
default-groups = ["dev"]

[tool.pyrefly]
project-includes = [
    "python",
    "tests/python",
]
project-excludes = ["**/tests/python/typing/negative.py"]
python-version = "3.11.0"
preset = "legacy"
