[package]
name = "btpc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
btpc-core = { path = "../crates/btpc-core" }
libfuzzer-sys = "0.4"

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonical_roundtrip"
path = "fuzz_targets/canonical_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metainfo"
path = "fuzz_targets/metainfo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metainfo_roundtrip"
path = "fuzz_targets/metainfo_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "magnet"
path = "fuzz_targets/magnet.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
