[package]
name = "btpc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "btpc"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.14"
btpc-core = { version = "0.1.0", path = "../btpc-core" }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
ctrlc = "3.5.2"
getrandom = "0.4.3"
indicatif = { version = "0.18.6", features = ["in_memory"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tempfile = "3.27.0"
toml = "1.1.2"
unicode-width = "0.2.2"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
