[package]
name = "btpc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = []

[lib]
path = "src/lib.rs"

[[bench]]
name = "core"
harness = false

[lints]
workspace = true

[dev-dependencies]
criterion = "0.7.0"
junction = "1.2.0"
proptest = "1.11.0"
trybuild = "1.0.116"

[dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
file-id = "0.2.3"
globset = "0.4.18"
same-file = "1.0.6"
sha1 = "0.11.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
