[package]
name = "btpc-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
btpc-core = { version = "0.1.0", path = "../btpc-core" }
pyo3 = { version = "0.29.0", features = ["extension-module"] }

[lints]
workspace = true
